# statey

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: statey.hpp  statey_audio.hpp  statey_midi.hpp  statey_object.hpp
src/: statey.cpp  statey_audio.cpp  statey_midi.cpp  statey_object.cpp
